@@ -1,7 +1,15 @@
 2025-01-01  Bill Denney  <wdenney@humanpredictions.com>
 
 	* R/digest.R: Increase testing removing "nocov" lines
-	* inst/tinytest/test_digest.R: Add tests for `digest()`
+	* inst/tinytest/test_digest.R: Additional digest() tests
+
+2024-12-31  Bill Denney  <wdenney@humanpredictions.com>
+
+	* DESCRiPTION (Description): Correct typos
+	* README.md: Idem
+	* man/digest.Rd: Idem
+	* sha1.Rd: Idem
+	* vignette/sha1.md: Idem
 
 2024-12-31  Dirk Eddelbuettel  <edd@debian.org>
 
